--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@
 #E3EECD
 #408E61
 #B0D2B7
+
 lavender
 grey
 crimson
 tomato
+coral
+lightcoral
 */
 
 
@@ -61,7 +64,7 @@ header{
 	position: relative;
 	left: 28.5%;
 	top: 10%;
-	padding: 10px 5px;
+	padding: 12px 4px;
 	transition: 0.5s;
 }
 .menu .title1, a{
@@ -111,17 +114,19 @@ header{
 	font-weight: bold;
 }
 .dt{
+	position: absolute;
+	left: 10%;
 	background: #f1f500;
 	color: #40676E;
 	font-size: 20px;
-	border: 1px solid #40676E;
+	border: 1px solid transparent;
 	border-radius: 2px;
 	height: 50px;
 	width: 100px;
 	cursor: pointer;
 }
 .dt:hover{
-	border: 1px solid #E3EECD;
+	border: 1px solid #71A596;
 	color: #71A596;
 }
 
@@ -940,7 +945,7 @@ header{
 	position: absolute;
 	display: inline-block;
 	top: 396%;
-	left: 22%;
+	left: 20%;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -956,7 +961,7 @@ header{
 	position: absolute;
 	display: inline-block;
 	top: 396%;
-	left: 25.3%;
+	left: 23.5%;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -972,7 +977,7 @@ header{
 	position: absolute;
 	display: inline-block;
 	top: 396%;
-	left: 28.5%;
+	left: 27%;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -981,6 +986,22 @@ header{
 	cursor: pointer;
 }
 .ict-pro1:hover{
+	background-color: #e6f702;
+	opacity: 0.4;
+}
+.icp-pro1{
+	position: absolute;
+	display: inline-block;
+	top: 396%;
+	left: 30.5%;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	background-color: #f1f500;
+	opacity: 0.8;
+	cursor: pointer;
+}
+.icp-pro1:hover{
 	background-color: #e6f702;
 	opacity: 0.4;
 }
@@ -1012,7 +1033,7 @@ header{
 	position: absolute;
 	display: inline-block;
 	top: 396%;
-	left: 56%;
+	left: 54%;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -1028,7 +1049,7 @@ header{
 	position: absolute;
 	display: inline-block;
 	top: 396%;
-	left: 59.5%;
+	left: 57.5%;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -1044,7 +1065,7 @@ header{
 	position: absolute;
 	display: inline-block;
 	top: 396%;
-	left: 63%;
+	left: 61%;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -1053,6 +1074,22 @@ header{
 	cursor: pointer;
 }
 .ict-pro2:hover{
+	background-color: #e6f702;
+	opacity: 0.4;
+}
+.icp-pro2{
+	position: absolute;
+	display: inline-block;
+	top: 396%;
+	left: 64.5%;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	background-color: #f1f500;
+	opacity: 0.8;
+	cursor: pointer;
+}
+.icp-pro2:hover{
 	background-color: #e6f702;
 	opacity: 0.4;
 }
@@ -1084,7 +1121,7 @@ header{
 	position: absolute;
 	display: inline-block;
 	top: 396%;
-	left: 90%;
+	left: 88%;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -1100,7 +1137,7 @@ header{
 	position: absolute;
 	display: inline-block;
 	top: 396%;
-	left: 93.3%;
+	left: 91.5%;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -1116,7 +1153,7 @@ header{
 	position: absolute;
 	display: inline-block;
 	top: 396%;
-	left: 96.5%;
+	left: 95%;
 	height: 30px;
 	width: 30px;
 	border-radius: 50%;
@@ -1128,18 +1165,34 @@ header{
 	background-color: #e6f702;
 	opacity: 0.4;
 }
+.icp-pro3{
+	position: absolute;
+	display: inline-block;
+	top: 396%;
+	left: 98.5%;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	background-color: #f1f500;
+	opacity: 0.8;
+	cursor: pointer;
+}
+.icp-pro3:hover{
+	background-color: #e6f702;
+	opacity: 0.4;
+}
 #face{
 	position: relative;
 	color: #40676E;
 	font-size: 16px;
-	left: 34%;
+	left: 35%;
 	top: 23%;
 }
 #twit{
 	position: relative;
 	color: #40676E;
 	font-size: 16px;
-	left: 30%;
+	left: 29%;
 	top: 23%;
 }
 #link{
@@ -1148,6 +1201,13 @@ header{
 	font-size: 16px;
 	left: 30%;
 	top: 23%;
+}
+#pint{
+	position: relative;
+	color: #40676E;
+	font-size: 16px;
+	left: 25%;
+	top: 22%;
 }
 
 
@@ -1180,8 +1240,6 @@ header{
 	border: grey 1px solid;
 	width: 40px;
 	height: 35px;
-	border-top-left-radius: 4px;
-	border-bottom-left-radius: 4px;
 	background-color: lavender;
 }
 #user{
@@ -1205,8 +1263,6 @@ header{
 	color: #40676E;
 	font-family: 'Roboto', sans-serif;
 	border: grey solid 1px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
 }
 .i-ic2{
 	position: absolute;
@@ -1216,8 +1272,6 @@ header{
 	border: grey 1px solid;
 	width: 40px;
 	height: 33px;
-	border-top-left-radius: 4px;
-	border-bottom-left-radius: 4px;
 	background-color: lavender;
 }
 #envelope{
@@ -1241,8 +1295,6 @@ header{
 	color: #40676E;
 	font-family: 'Roboto', sans-serif;
 	border: grey solid 1px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
 }
 .i-ic3{
 	position: absolute;
@@ -1252,8 +1304,6 @@ header{
 	border: grey 1px solid;
 	width: 40px;
 	height: 35px;
-	border-top-left-radius: 4px;
-	border-bottom-left-radius: 4px;
 	background-color: lavender;
 }
 #call{
@@ -1277,8 +1327,6 @@ header{
 	color: #40676E;
 	font-family: 'Roboto', sans-serif;
 	border: grey solid 1px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
 }
 .fm4{
 	position: absolute;
@@ -1291,7 +1339,6 @@ header{
 	width: 460px;
 	padding: 10px;
 	border: grey solid 1px;
-	border-radius: 4px;
 }
 .fm5{
 	position: absolute;
@@ -1302,20 +1349,17 @@ header{
 .b-fm5{
 	height: 38px;
 	width: 482px;
-	background-color: crimson;
+	background-color: lightcoral;
+	border: 1px solid transparent;
 	color: #E3EECD;
-	border-radius: 4px;
 	font-size: 15px;
 	font-weight: bold;
 	font-family: 'Roboto', sans-serif;
 	cursor: pointer;
-	outline: none;
 }
 .b-fm5:hover{
 	font-family: 'Roboto', sans-serif;
-	border: 1px solid #71A596;
-	cursor: pointer;
-	outline: none;
+	background-color: coral;
 }
 
 
@@ -1326,21 +1370,13 @@ header{
 	position: absolute;
 	display: inline-block;
 	background-color: #40676E;
-	height: 28%;
+	height: 35%;
 	width: 160%;
 	color: #E3EECD;
 	left: 0%;
 	margin-left: -10%;
 }
 .ic-foot1{
-	top: 488%;
-	left: 16.5%;
-	position: absolute;
-	display: inline-block;
-	width: 25px;
-	height: 25px;
-}
-.ic-foot2{
 	top: 494%;
 	left: 16.5%;
 	position: absolute;
@@ -1348,8 +1384,16 @@ header{
 	width: 25px;
 	height: 25px;
 }
+.ic-foot2{
+	top: 498%;
+	left: 16.5%;
+	position: absolute;
+	display: inline-block;
+	width: 25px;
+	height: 25px;
+}
 .ic-foot3{
-	top: 500%;
+	top: 502%;
 	left: 16.5%;
 	position: absolute;
 	display: inline-block;
@@ -1370,7 +1414,7 @@ header{
 	font-size: 13px;
 }
 .p-foot1{
-	top: 486.3%;
+	top: 492.5%;
 	left: 18.5%;
 	position: absolute;
 	display: inline-block;
@@ -1378,7 +1422,7 @@ header{
 	font-size: 13px;
 }
 .p-foot2{
-	top: 492.3%;
+	top: 496.2%;
 	left: 18.5%;
 	position: absolute;
 	display: inline-block;
@@ -1386,7 +1430,7 @@ header{
 	font-size: 13px;
 }
 .p-foot3{
-	top: 498.3%;
+	top: 500.2%;
 	left: 18.5%;
 	position: absolute;
 	display: inline-block;
@@ -1394,7 +1438,7 @@ header{
 	font-size: 13px;
 }
 .p-foot4{
-	top: 504.3%;
+	top: 504.2%;
 	left: 18.5%;
 	position: absolute;
 	display: inline-block;
@@ -1402,7 +1446,7 @@ header{
 	font-size: 13px;
 }
 .pp-foot1{
-	top: 486.3%;
+	top: 492.5%;
 	left: 50%;
 	position: absolute;
 	display: inline-block;
@@ -1410,7 +1454,7 @@ header{
 	font-size: 13px;
 }
 .pp-foot2{
-	top: 492.3%;
+	top: 496.2%;
 	left: 50%;
 	position: absolute;
 	display: inline-block;
@@ -1418,7 +1462,7 @@ header{
 	font-size: 13px;
 }
 .pp-foot3{
-	top: 498.3%;
+	top: 500.2%;
 	left: 50%;
 	position: absolute;
 	display: inline-block;
@@ -1426,7 +1470,7 @@ header{
 	font-size: 13px;
 }
 .last-ico1{
-	top: 488%;
+	top: 494%;
 	left: 80%;
 	position: absolute;
 	display: inline-block;
@@ -1435,8 +1479,8 @@ header{
 	width: 26px;
 }
 .last-ico2{
-	top: 488%;
-	left: 84%;
+	top: 494%;
+	left: 83.5%;
 	position: absolute;
 	display: inline-block;
 	border: 2px solid lavender;
@@ -1444,8 +1488,8 @@ header{
 	width: 26px;
 }
 .last-ico3{
-	top: 488%;
-	left: 84%;
+	top: 494%;
+	left: 87%;
 	position: absolute;
 	display: inline-block;
 	border: 2px solid lavender;
@@ -1453,8 +1497,8 @@ header{
 	width: 26px;
 }
 .last-ico4{
-	top: 488%;
-	left: 88%;
+	top: 494%;
+	left: 90.5%;
 	position: absolute;
 	display: inline-block;
 	border: 2px solid lavender;
@@ -1462,8 +1506,8 @@ header{
 	width: 26px;
 }
 .last-ico5{
-	top: 488%;
-	left: 92%;
+	top: 494%;
+	left: 94%;
 	position: absolute;
 	display: inline-block;
 	border: 2px solid lavender;
@@ -1471,8 +1515,8 @@ header{
 	width: 26px;
 }
 .last-ico6{
-	top: 488%;
-	left: 96%;
+	top: 494%;
+	left: 97.5%;
 	position: absolute;
 	display: inline-block;
 	border: 2px solid lavender;
@@ -1482,39 +1526,41 @@ header{
 .last-fm1{
 	position: absolute;
 	display: inline-block;
-	top: 495%;
+	top: 501%;
 	left: 80%;
 }
 .last-tfm{
 	height: 20px;
-	width: 116px;
+	width: 135px;
 	padding: 10px;
 	border: grey solid 1px;
-	font-size: 10.5px;
-	border-radius: 2px;
+	font-size: 13px;
+	border: 1px solid transparent;
 	background-color: lavender;
 }
 .last-fm2{
 	position: absolute;
 	display: inline-block;
-	top: 495%;
-	left: 93%;
+	top: 501%;
+	left: 95%;
 }
 .last-bfm{
 	height: 42px;
-	width: 80px;
+	width: 95px;
 	background-color: #e6f702;
 	color: #40676E;
-	border-radius: 4px;
+	border: 1px solid transparent;
 	font-size: 12px;
 	font-weight: bold;
 	font-family: 'Roboto', sans-serif;
 	cursor: pointer;
 	outline: none;
+	border-radius: 5px;
 }
 .last-bfm:hover{
 	font-family: 'Roboto', sans-serif;
 	background-color: tomato;
+	color: #E3EECD;
 	cursor: pointer;
 	outline: none;
 }
